syntax = "proto3";

package mpb;

option go_package = "./mpb";

 import "common.proto";

// item
message CResGetItems {
    repeated Item items = 1;
    repeated BaseEquip base_equips = 2;
    repeated NFTEquip nft_equips = 3;
    uint64 mana = 4;
    repeated BaseEquipUpgradeInfo base_equip_upgrade_infos = 5;
}

message CReqUpgradeBaseEquipStar {
    EItem.BaseEquipType equipt_type = 1;
    uint32 cur_star = 2;
}

message CResUpgradeBaseEquipStar {
    bool success = 1;
    uint32 new_star = 2;
}

message CReqUpgradeBaseEquipLevel {
    EItem.BaseEquipType equipt_type = 1;
    uint32 cur_level = 2;
}

message CResUpgradeBaseEquipLevel {
    bool success = 1;
    uint32 new_level = 2;
}